# object-viewer

./: Makefile  README.md
dvi-folder/: README.html  parse_md_file.js  plugin_script.js  resize_images_script.js
src/: CMakeLists.txt  main.cc
src/Controller/: Controller.cc  Controller.h
src/Gif/: Gif.cc  Gif.h
src/Matrix/: Matrix.cc  Matrix.h
src/Model/: Model.cc  Model.h  ModelConstants.h
src/Model/Parser/: Parser.cc  Parser.h
src/Model/Transformation/: Transformation.cc  Transformation.h
src/View/opengl/: Camera.cc  Camera.h  Constants.h  Mesh.cc  Mesh.h  Renderer.cc  Renderer.h  fragmentShader.frag  shaders.qrc  vertexShader.vert
src/View/opengl/OpenGLWidget/: CameraMode.h  OpenGLWidget.cc  OpenGLWidget.h  Transform.h
src/View/ui/: structs.h
src/View/ui/ColorPushButton/: ColorPushButton.cc  ColorPushButton.h
src/View/ui/EventHandler/: EventHandler.cc  EventHandler.h
src/View/ui/FileHandler/: FileHandler.h
src/View/ui/MediaProcessor/: MediaProcessor.cc  MediaProcessor.h
src/View/ui/Preferences/: Preferences.cc  Preferences.h
src/View/ui/RecentFile/: RecentFile.h
src/View/ui/SpinBox/: SpinBox.cc  SpinBox.h  SpinBoxLineEdit.cc  SpinBoxLineEdit.h  SpinBoxPushButton.cc  SpinBoxPushButton.h
src/View/ui/StatusBar/: StatusBar.h
src/View/ui/TitleBar/: TitleBar.cc  TitleBar.h
src/View/ui/TransformWidget/: TransformWidget.cc  TransformWidget.h
src/View/ui/View/: View.cc  View.h  View.ui
src/View/ui/dockWidgets/DockWidgetModelEditor/: DockWidgetModelEditor.cc  DockWidgetModelEditor.h
src/View/ui/dockWidgets/DockWidgetSettings/: DockWidgetSettings.cc  DockWidgetSettings.h
src/View/ui/media/: media.qrc
src/View/ui/menuBar/MenuBar/: MenuBar.cc  MenuBar.h
src/View/ui/menuBar/MenuFile/: MenuFile.cc  MenuFile.h
src/View/ui/menuBar/MenuMedia/: MenuMedia.cc  MenuMedia.h
src/View/ui/menuBar/MenuViews/: MenuViews.cc  MenuViews.h
src/View/ui/modalWidgets/AboutWindow/: AboutWindow.cc  AboutWindow.h  AboutWindow.ui
src/View/ui/modalWidgets/FileDialog/: FileDialog.cc  FileDialog.h
src/View/ui/modalWidgets/FileInformationWindow/: FileInformationWindow.cc  FileInformationWindow.h  FileInformationWindow.ui
src/View/ui/modalWidgets/PreferencesWindow/: PreferencesWindow.cc  PreferencesWindow.h  PreferencesWindow.ui
src/View/ui/styles/: DockWidgetSettingsStyles.qss  FileDialogStyles.qss  MainWindowStyles.qss  MenuBarStyles.qss  PreferencesWindowStyles.qss  TitleBarStyles.qss  global_styles.h  styles.cc  styles.h  styles.qrc
src/View/ui/userInteractionWidgets/: ModelEditor.cc  ModelEditor.h  ModelEditor.ui  ModelViewer.h  ModelViewer.ui
src/common/: MeshData.h  ParseErrorEnums.h  ParseResult.h
tests/: affine_transformations_tests.cc  model_loading_tests.cc
tests/obj_files/: obj_files.tar
